--- a/src/Gui/fxml/Correlogram.fxml
+++ b/src/Gui/fxml/Correlogram.fxml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <VBox fx:id="correlogramView" prefHeight="326.9999000000025" prefWidth="1119.0" style="-fx-background-color: gainsboro;" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.CorrelogramController">
-  <TabPane id="visualizationSwitcher" fx:id="visualizationSelector" maxHeight="27.0" minHeight="0.0" prefHeight="27.0" prefWidth="1119.0" style="-fx-background-color: white;" styleClass="mainFxmlClass" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="26.0" tabMinHeight="0.0">
-    <tabs>
-      <Tab text="" />
-      <Tab text="" />
-      <Tab text="" />
-      <Tab text="" />
-      <Tab text="" />
-    </tabs>
-  </TabPane>
+    <TabPane id="visualizationSwitcher" fx:id="visualizationSelector" maxHeight="27.0" minHeight="0.0" prefHeight="27.0"
+             prefWidth="1119.0" style="-fx-background-color: white;" styleClass="mainFxmlClass"
+             tabClosingPolicy="UNAVAILABLE" tabMaxHeight="26.0" tabMinHeight="0.0">
+        <Tab text=""/>
+        <Tab text=""/>
+        <Tab text=""/>
+        <Tab text=""/>
+        <Tab text=""/>
+    </TabPane>
   <StackPane fx:id="correlogramPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" style="/*-fx-background-color:white;*/" VBox.vgrow="ALWAYS" />
-  <StackPane fx:id="legendPane" maxHeight="140.0" maxWidth="1.7976931348623157E308" prefHeight="140.0" prefWidth="-1.0" style="/*-fx-background-color:blue;*/" VBox.vgrow="NEVER">
+  <StackPane fx:id="legendPane" maxHeight="280.0" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="-1.0" style="/*-fx-background-color:blue;*/" VBox.vgrow="NEVER">
     <Button cancelButton="false" contentDisplay="GRAPHIC_ONLY" defaultButton="false" graphicTextGap="0.0" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" onAction="#resetView" prefHeight="20.0" prefWidth="20.0" style=";" text="" translateX="-20.0" StackPane.alignment="BOTTOM_LEFT">
       <graphic>
         <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
-          <Image url="@img/glyphicons_214_resize_small.png" />
+          <Image url="@../img/glyphicons_214_resize_small.png" />
         </ImageView>
       </graphic>
       <tooltip>
@@ -29,11 +28,21 @@
     <ToggleButton fx:id="linkWithTimeSeriesViewToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" selected="true" text="" translateX="-20.0" translateY="-20.0" StackPane.alignment="BOTTOM_LEFT">
       <graphic>
         <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
-          <Image url="@img/glyphicons_050_link.png" />
+          <Image url="@../img/glyphicons_050_link.png" />
         </ImageView>
       </graphic>
       <tooltip>
         <Tooltip text="Link horizontal zoom and pan with time series view" />
+      </tooltip>
+    </ToggleButton>
+    <ToggleButton id="linkWithTimeSeriesViewToggle" fx:id="scatterPlotToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" selected="true" text="" translateX="-20.0" translateY="-60.0" StackPane.alignment="BOTTOM_LEFT">
+      <graphic>
+        <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">
+          <Image url="@../img/glyphicons_185_screenshot.png" />
+        </ImageView>
+      </graphic>
+      <tooltip>
+        <Tooltip text="Show distribution of the correlation matrix values as scatterplot overlay." />
       </tooltip>
     </ToggleButton>
   </StackPane>
