--- a/src/Gui/fxml/TimeSeriesView.fxml
+++ b/src/Gui/fxml/TimeSeriesView.fxml
@@ -26,7 +26,7 @@
         <graphic>
             <ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true"
                        smooth="false">
-                <Image url="@img/glyphicons_214_resize_small.png"/>
+                <Image url="@../img/glyphicons_214_resize_small.png"/>
             </ImageView>
         </graphic>
         <tooltip>
