--- a/src/Gui/fxml/MainWindow.fxml
+++ b/src/Gui/fxml/MainWindow.fxml
@@ -6,13 +6,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
 <StackPane minHeight="600.0" minWidth="800.0" prefHeight="768.0" prefWidth="1024.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.MainWindowController">
-  <SplitPane dividerPositions="0.1762402088772846, 0.4765013054830287" focusTraversable="true" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+  <SplitPane dividerPositions="0.1762402088772846, 0.5104438642297651" focusTraversable="true" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
     <AnchorPane fx:id="inputPane" minHeight="0.0" prefHeight="144.0" prefWidth="1022.0" style="-fx-background-color: gainsboro;">
       <Text layoutX="-39.0" layoutY="55.0" rotate="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input Selection" translateX="0.0" />
       <StackPane minHeight="0.0" prefHeight="165.0" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <TabPane fx:id="inputTabPane" minHeight="0.0" prefHeight="165.0" prefWidth="200.0" rotateGraphic="false" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="26.0" tabMinHeight="0.0">
-          <Tab closable="false" style="" text="Available in File">
-            <fx:include fx:id="fileInput" source="FileInputTab.fxml" alignment="TOP_LEFT" />
+          <Tab closable="false" style="" text="File 1">
+            <fx:include fx:id="fileInputA" source="FileInputTab.fxml" alignment="TOP_LEFT" />
+          </Tab>
+          <Tab closable="false" style="" text="File 2">
+            <fx:include fx:id="fileInputB" source="FileInputTab.fxml" alignment="TOP_LEFT" />
           </Tab>
           <Tab closable="false" text="Computation Input">
             <fx:include fx:id="computationInput" source="ComputationInputTab.fxml" alignment="TOP_LEFT" />
@@ -40,24 +43,24 @@
       <Text fontSmoothingType="GRAY" rotate="270.0" smooth="true" strikethrough="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Correlation View" translateX="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-45.0" AnchorPane.topAnchor="50.0" />
       <fx:include fx:id="correlationView" source="Correlogram.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <!--<ToggleButton id="linkWithTimeSeriesViewToggle" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" selected="true" text="" translateX="0.0" translateY="-20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">-->
-        <!--<graphic>-->
-          <!--<ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">-->
-            <!--<Image url="@img/glyphicons_050_link.png" />-->
-          <!--</ImageView>-->
-        <!--</graphic>-->
-        <!--<tooltip>-->
-          <!--<Tooltip text="Link horizontal zoom and pan with time series view" />-->
-        <!--</tooltip>-->
+      <!--<graphic>-->
+      <!--<ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">-->
+      <!--<Image url="@img/glyphicons_050_link.png" />-->
+      <!--</ImageView>-->
+      <!--</graphic>-->
+      <!--<tooltip>-->
+      <!--<Tooltip text="Link horizontal zoom and pan with time series view" />-->
+      <!--</tooltip>-->
       <!--</ToggleButton>-->
       <!--<Button cancelButton="false" contentDisplay="GRAPHIC_ONLY" defaultButton="false" graphicTextGap="0.0" maxHeight="20.0" maxWidth="20.0" minHeight="20.0" minWidth="20.0" mnemonicParsing="false" onAction="#resetView" prefHeight="20.0" prefWidth="20.0" style=";" text="" translateX="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">-->
-        <!--<graphic>-->
-          <!--<ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">-->
-            <!--<Image url="@img/glyphicons_214_resize_small.png" />-->
-          <!--</ImageView>-->
-        <!--</graphic>-->
-        <!--<tooltip>-->
-          <!--<Tooltip text="Reset correlogram view" />-->
-        <!--</tooltip>-->
+      <!--<graphic>-->
+      <!--<ImageView fitHeight="14.0" fitWidth="14.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" smooth="false">-->
+      <!--<Image url="@img/glyphicons_214_resize_small.png" />-->
+      <!--</ImageView>-->
+      <!--</graphic>-->
+      <!--<tooltip>-->
+      <!--<Tooltip text="Reset correlogram view" />-->
+      <!--</tooltip>-->
       <!--</Button>-->
     </AnchorPane>
   </SplitPane>
