--- a/src/Gui/fxml/ComputationInputTab.fxml
+++ b/src/Gui/fxml/ComputationInputTab.fxml
@@ -1,69 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<GridPane fx:id="computationInputPane" gridLinesVisible="false" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.ComputationInputController">
-  <Label alignment="CENTER_LEFT" prefWidth="544.0" text="Limits" underline="false" visible="false" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-  <GridPane GridPane.columnIndex="0" GridPane.rowIndex="1">
-    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="118.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="73.0" minWidth="10.0" prefWidth="73.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="137.0" minWidth="10.0" prefWidth="103.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="85.0" minWidth="9.0" prefWidth="62.0" />
-    </columnConstraints>
-    <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    </rowConstraints>
-    <Label contentDisplay="RIGHT" text="Window size" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="0">
-      <tooltip>
-        <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
-      </tooltip>
-    </Label>
-    <TextField fx:id="windowSizeText" alignment="TOP_RIGHT" prefWidth="45.0" text="200" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-    <Label prefWidth="-1.0" text="window offset" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="0" />
-    <TextField fx:id="baseWindowOffsetText" alignment="TOP_RIGHT" prefWidth="45.0" text="70" visible="true" GridPane.columnIndex="3" GridPane.rowIndex="0" />
-    <Label contentDisplay="RIGHT" text="Time lag min" visible="true" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-      <tooltip>
-        <Tooltip text="Defines the lower limit of the time lag range to compute in each window." />
-      </tooltip>
-    </Label>
-    <TextField fx:id="timeLagMinText" alignment="TOP_RIGHT" prefWidth="45.0" text="-100" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-    <Label contentDisplay="RIGHT" text="Time lag max" visible="true" wrapText="true" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-      <tooltip>
-        <Tooltip text="Defines the upper limit of the time lag range to compute in each window." />
-      </tooltip>
-    </Label>
-    <TextField fx:id="timeLagMaxText" alignment="TOP_RIGHT" prefWidth="45.0" text="100" visible="true" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-    <Label contentDisplay="RIGHT" text="p value" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
-      <tooltip>
-        <Tooltip text="The level of significance when testing on significant correlation values (usually 0.05 = 5% or 0.01 = 1%)." />
-      </tooltip>
-    </Label>
-    <TextField id="significanceLevel" fx:id="significanceLevelText" alignment="TOP_RIGHT" prefWidth="45.0" text="0.05" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-  </GridPane>
-  <BorderPane prefHeight="103.0" prefWidth="180.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-    <center>
-      <Button id="openFileButton" fx:id="runButton" alignment="CENTER" cancelButton="false" contentDisplay="CENTER" defaultButton="true" disable="true" focusTraversable="true" mnemonicParsing="false" onAction="#compute" prefHeight="30.0" prefWidth="130.0" text="Run" textAlignment="LEFT" wrapText="false" BorderPane.alignment="CENTER">
-        <font>
-          <Font size="11.0" fx:id="x2" />
-        </font>
-      </Button>
-    </center>
-    <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" />
-    </padding>
-  </BorderPane>
-  <columnConstraints>
-    <ColumnConstraints maxWidth="-1.0" minWidth="150.0" prefWidth="400.0" />
-    <ColumnConstraints maxWidth="-1.0" minWidth="0.0" prefWidth="200.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="22.0" prefHeight="16.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="103.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-  <Label alignment="CENTER" prefWidth="544.0" text="Windowed Cross-Correlation Parameters" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-</GridPane>
+<?import java.net.URL?>
+<HBox fx:id="computationInputPane" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.ComputationInputController">
+  <SplitPane dividerPositions="0.274234693877551" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS">
+    <items>
+      <TableView minWidth="0.0" prefHeight="200.0" prefWidth="386.9998779296875" style="-fx-focus-color: transparent;">
+        <columns>
+          <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="84.0" style="-fx-font-size: 11;" text="input series" />
+          <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="60.0" style="-fx-font-size: 11px;" text="|w|" />
+          <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="60.0" style="-fx-font-size: 10px;" text="overlap" />
+          <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="76.0" style="-fx-font-size: 11px;" text="lag range" />
+          <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="52.0" style="-fx-font-size: 11;" text="p" />
+          <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="75.0" style="-fx-font-size: 10;" text="time (h:m:s)" />
+        </columns>
+        <tooltip>
+          <Tooltip text="|w| = window size; p = significance level for correlation coefficients; time = elapsed time during computation.." />
+        </tooltip>
+      </TableView>
+      <GridPane gridLinesVisible="false">
+        <GridPane GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+          <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="118.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="73.0" minWidth="10.0" prefWidth="73.0" />
+          </columnConstraints>
+          <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          </rowConstraints>
+          <Label contentDisplay="RIGHT" text="Window size" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="0">
+            <tooltip>
+              <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
+            </tooltip>
+          </Label>
+          <TextField fx:id="windowSizeText" alignment="TOP_RIGHT" prefWidth="45.0" text="200" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+          <Label contentDisplay="RIGHT" text="Time lag min" visible="true" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <tooltip>
+              <Tooltip text="Defines the lower limit of the time lag range to compute in each window." />
+            </tooltip>
+          </Label>
+          <TextField fx:id="timeLagMinText" alignment="TOP_RIGHT" prefWidth="45.0" text="-100" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+          <Label contentDisplay="RIGHT" text="p value" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+            <tooltip>
+              <Tooltip text="The level of significance when testing on significant correlation values (usually 0.05 = 5% or 0.01 = 1%)." />
+            </tooltip>
+          </Label>
+          <TextField id="significanceLevel" fx:id="significanceLevelText" alignment="TOP_RIGHT" prefWidth="45.0" text="0.05" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+          <Label prefWidth="-1.0" text="window overlap" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+          <TextField fx:id="baseWindowOffsetText" alignment="TOP_RIGHT" minHeight="-1.0" prefHeight="-1.0" prefWidth="45.0" text="130" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+          <Label contentDisplay="RIGHT" text="Time lag max" visible="true" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+            <tooltip>
+              <Tooltip text="Defines the upper limit of the time lag range to compute in each window." />
+            </tooltip>
+          </Label>
+          <TextField fx:id="timeLagMaxText" alignment="TOP_RIGHT" prefWidth="45.0" text="100" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        </GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="ALWAYS" minWidth="150.0" />
+          <ColumnConstraints hgrow="ALWAYS" minWidth="150.0" />
+          <ColumnConstraints hgrow="NEVER" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="16.0" prefHeight="16.0" vgrow="NEVER" />
+          <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
+          <RowConstraints fillHeight="true" maxHeight="-1.0" minHeight="-1.0" prefHeight="-1.0" vgrow="NEVER" />
+        </rowConstraints>
+        <Label contentDisplay="RIGHT" text="Input File 1" textFill="#00cc21" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0">
+          <tooltip>
+            <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
+          </tooltip>
+        </Label>
+        <Button id="openFileButton" fx:id="runButton" alignment="CENTER" cancelButton="false" contentDisplay="CENTER" defaultButton="true" disable="false" focusTraversable="true" minHeight="-1.0" mnemonicParsing="false" onAction="#compute" prefHeight="-1.0" prefWidth="130.0" text="Compute" textAlignment="LEFT" underline="false" wrapText="false" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+          <font>
+            <Font size="11.0" fx:id="x2" />
+          </font>
+        </Button>
+        <Label contentDisplay="RIGHT" text="Input File 2" textFill="#0066ff" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="0">
+          <tooltip>
+            <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
+          </tooltip>
+        </Label>
+        <FlowPane alignment="TOP_CENTER" prefHeight="-1.0" prefWidth="-1.0" prefWrapLength="10.0" GridPane.columnIndex="0" GridPane.rowIndex="2">
+          <children>
+            <Button alignment="CENTER_LEFT" font="$x2" mnemonicParsing="false" prefWidth="-1.0" style="-fx-border-radius:0;" text="toggle selected" />
+            <Button alignment="CENTER_LEFT" font="$x2" mnemonicParsing="false" prefWidth="-1.0" style="" text="add random" />
+          </children>
+        </FlowPane>
+        <FlowPane alignment="TOP_CENTER" prefHeight="-1.0" prefWidth="-1.0" prefWrapLength="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+          <children>
+            <Button alignment="CENTER_LEFT" font="$x2" mnemonicParsing="false" prefWidth="-1.0" style="-fx-border-radius:0;" text="toggle selected" />
+            <Button alignment="CENTER_LEFT" font="$x2" mnemonicParsing="false" prefWidth="-1.0" style="" text="add random" />
+          </children>
+        </FlowPane>
+      </GridPane>
+    </items>
+  </SplitPane>
+  <stylesheets>
+    <URL value="@base.css" />
+  </stylesheets>
+</HBox>
