--- a/src/Gui/fxml/ComputationTab.fxml
+++ b/src/Gui/fxml/ComputationTab.fxml
@@ -69,16 +69,6 @@
             <Button fx:id="setAAddRandomButton" alignment="CENTER_LEFT" font="$x2" mnemonicParsing="false" prefWidth="-1.0" style="" text="add random" />
           </children>
         </FlowPane>
-        <columnConstraints>
-          <ColumnConstraints hgrow="ALWAYS" minWidth="150.0" />
-          <ColumnConstraints hgrow="ALWAYS" minWidth="150.0" />
-          <ColumnConstraints hgrow="NEVER" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="16.0" prefHeight="16.0" vgrow="NEVER" />
-          <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
-          <RowConstraints fillHeight="true" maxHeight="-1.0" minHeight="-1.0" prefHeight="-1.0" vgrow="NEVER" />
-        </rowConstraints>
         <FlowPane alignment="TOP_CENTER" prefHeight="-1.0" prefWidth="-1.0" prefWrapLength="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
           <children>
             <Button id="setBToggleSelectedButton" fx:id="setBAddButton" alignment="CENTER_LEFT" font="$x2" mnemonicParsing="false" prefWidth="-1.0" style="-fx-border-radius:0;" text="add" />
@@ -91,10 +81,20 @@
             <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
           </tooltip>
         </Label>
+        <columnConstraints>
+          <ColumnConstraints hgrow="ALWAYS" minWidth="150.0" />
+          <ColumnConstraints hgrow="ALWAYS" minWidth="150.0" />
+          <ColumnConstraints hgrow="NEVER" maxWidth="-1.0" minWidth="150.0" prefWidth="-1.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="16.0" prefHeight="16.0" vgrow="NEVER" />
+          <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
+          <RowConstraints fillHeight="true" maxHeight="-1.0" minHeight="-1.0" prefHeight="-1.0" vgrow="NEVER" />
+        </rowConstraints>
       </GridPane>
       <VBox id="VBox" alignment="CENTER" spacing="5.0">
         <children>
-          <TableView id="correlogramTable" fx:id="correlogramCacheTable" disable="false" editable="false" minWidth="0.0" prefHeight="200.0" prefWidth="386.9998779296875" style="-fx-focus-color: transparent;" tableMenuButtonVisible="false">
+          <TableView id="correlogramTable" fx:id="correlogramCacheTable" disable="false" editable="false" minWidth="0.0" prefHeight="200.0" prefWidth="386.9998779296875" style="-fx-focus-color: transparent;" tableMenuButtonVisible="false" VBox.vgrow="ALWAYS">
             <columns>
               <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="111.0" style="-fx-font-size: 11; -fx-background-color: #00cc21;" text="size of input set 1" fx:id="input1SeriesColumn" />
               <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" style="-fx-font-size: 11; -fx-background-color: #0066ff;" text="size of input set 2" fx:id="input2SeriesColumn" />
