--- a/src/Gui/fxml/CellDistributionView.fxml
+++ b/src/Gui/fxml/CellDistributionView.fxml
@@ -23,5 +23,5 @@
   <WebView fx:id="webView" cache="true" cacheHint="QUALITY" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
   <Text fontSmoothingType="GRAY" rotate="270.0" smooth="true" strikethrough="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Correlation Values" translateX="0.0" AnchorPane.bottomAnchor="-2.32" AnchorPane.leftAnchor="-48.0" AnchorPane.topAnchor="52.32" />
   <Slider fx:id="numBinsSlider" blockIncrement="1.0" max="500.0" min="10.0" snapToTicks="true" value="40.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-  <Label text="Number of Bins" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="145.0" />
+  <Label fx:id="numberOfBinsLabel" text="Number of Bins" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="145.0" />
 </AnchorPane>
